# AlignGraph2

./: .gitmodules  AlignGraph2.py  README.md  install.py
PAGraph/: .gitignore  CMakeLists.txt  README.md
PAGraph/src/main/: kmer_counter.cpp  pa_cns.cpp  pagraph.cpp  pre_process.cpp  test.cpp
PAGraph/src/tools/align/: AbstractAlignDatabase.cpp  AbstractAlignDatabase.hpp  AlignInf.cpp  AlignInf.hpp  AlignReference.cpp  AlignReference.hpp  Aligner.cpp  Aligner.hpp  Aligner.tcc  AlignmentHelper.cpp  AlignmentHelper.hpp  IAlignDatabase.hpp  MecatAlignDatabase.cpp  MecatAlignDatabase.hpp  MummerAlignDatabaseV2.cpp  MummerAlignDatabaseV2.hpp  ParseAlignTools.cpp  ParseAlignTools.hpp  ParseAlignTools.tcc
PAGraph/src/tools/cns/: AlignData.cpp  AlignData.hpp  Alignment.cpp  Alignment.hpp  AlnGraphBoost.cpp  AlnGraphBoost.hpp
PAGraph/src/tools/graph/: PABruijnGraph.cpp  PABruijnGraph.hpp  PABruijnGraph.tcc  PAlgorithm.cpp  PAlgorithm.hpp  PAlgorithm.tcc  PAssembly.cpp  PAssembly.hpp  PAssembly.tcc  UnionSet.cpp  UnionSet.hpp
PAGraph/src/tools/kmer/: AbstractKmerDatabase.cpp  AbstractKmerDatabase.hpp  FileKmerIterator.cpp  FileKmerIterator.hpp  IKmerDatabase.hpp  IKmerIterator.hpp  KmerHelper.cpp  KmerHelper.hpp  KmerInf.cpp  KmerInf.hpp
PAGraph/src/tools/node/: ABruijnNode.hpp  KMerAdjNode.hpp  KMerAdjNode.tcc  PABruijnNode.hpp
PAGraph/src/tools/position/: PositionMapper.cpp  PositionMapper.hpp  PositionProcessor.cpp  PositionProcessor.hpp
PAGraph/src/tools/seq/: AbstractSeqDatabase.cpp  AbstractSeqDatabase.hpp  AutoSeqDatabase.cpp  AutoSeqDatabase.hpp  SeqHelper.cpp  (+6 more)
(+14 files in other folders)
